# yeager-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  YeagerEngine.sln  install.py  setup.py  yaeger-engine.vcxproj
Apps/Yeager/: Application.cpp  Application.h  DefaultValues.cpp  DefaultValues.h  InputHandle.cpp  InputHandle.h  Interface.cpp  Interface.h  Launcher.cpp  Launcher.h  Request.cpp  Request.h  Scene.cpp  Scene.h  Serialization.cpp  Serialization.h  Settings.cpp  Settings.h  main.cpp
Apps/Yeager/Assets/Objects/: skybox.mtl
Apps/Yeager/Assets/Shaders/: collision_fg.glsl  collision_vt.glsl  geometry_fg.glsl  geometry_vt.glsl  imp_object_fg.glsl  lighting_fg.glsl  lighting_vt.glsl  lines_fg.glsl  lines_vt.glsl  simple_animated_fg.glsl  simple_animated_vt.glsl  simple_fg.glsl  simple_instanced_vt.glsl  simple_vt.glsl  skybox_fg.glsl  terrain_fg.glsl  terrain_vt.glsl
Apps/Yeager/Assets/shaders/: common_vt.glsl  geometry_vt.glsl  simple_fg.glsl  skybox_fg.glsl
Apps/Yeager/Common/: Common.h  DirectorySystem.cpp  DirectorySystem.h  LogEngine.cpp  LogEngine.h  Mathematics.cpp  Mathematics.h  PlataformSpecific.h  Random.cpp  Random.h  SystemDetect.h  Time.cpp  Time.h  Utilities.cpp  Utilities.h
Apps/Yeager/Configuration/Editor/: editor_variables.yml  loaded_projects_path.yml
Apps/Yeager/Configuration/Lang/: en_us.yml  pt_br.yml
Apps/Yeager/Configuration/Scenes/: DefaultScene.yaml  Window Manager.yaml  default.yaml  scene_default.yaml  test.yml  test_scene.yaml
Apps/Yeager/Engine/Editor/: Camera.cpp  Camera.h  Explorer.cpp  Explorer.h  NodeHierarchy.cpp  NodeHierarchy.h  ToolboxObj.cpp  ToolboxObj.h
Apps/Yeager/Engine/Interface/: FolderExplorer.cpp  FolderExplorer.h  Interface.cpp  Interface.h  Locale.cpp  Locale.h  Notification.cpp  Notification.h  UIManagement.cpp  UIManagement.h
Apps/Yeager/Engine/Lighting/: LightHandle.cpp  LightHandle.h
Apps/Yeager/Engine/Media/: AudioHandle.cpp  AudioHandle.h  VideoPlayer.cpp  VideoPlayer.h
Apps/Yeager/Engine/Physics/: PhysXActor.cpp  PhysXActor.h  PhysXCharacterController.cpp  PhysXCharacterController.h  PhysXGeometryHandle.cpp  PhysXGeometryHandle.h  PhysXHandle.cpp  PhysXHandle.h  PhysicsHandle.cpp  PhysicsHandle.h  PhysxAllocator.h
Apps/Yeager/Engine/Renderer/: AABBCollision.cpp  AABBCollision.h  Entity.cpp  Entity.h  Geometry.cpp  Geometry.h  ImageUtilities.cpp  ImageUtilities.h  ImportedObj.cpp  ImportedObj.h  Importer.cpp  Importer.h  Object.cpp  Object.h  OpenGLRender.cpp  OpenGLRender.h  Render.cpp  Render.h  RendererLines.cpp  RendererLines.h  ShaderHandle.cpp  ShaderHandle.h  Skybox.cpp  Skybox.h  TextureHandle.cpp  TextureHandle.h  Window.cpp  Window.h
Apps/Yeager/Engine/Terrain/: PerlinNoise.cpp  PerlinNoise.h  ProceduralTerrain.cpp  ProceduralTerrain.h
Apps/Yeager/Kernel/: Allocator.h  HardwareInfo.cpp  HardwareInfo.h  NvidiaCuda.h  Thread.h  ThreadHandle.h
Apps/Yeager/Kernel/Caching/: Cache.cpp  Cache.h
Apps/Yeager/Kernel/Network/: Connection.cpp  Connection.h  NetworkSocket.cpp  NetworkSocket.h
Apps/Yeager/Resources/Shaders/: font2D_vt.glsl  font3D_vt.glsl  lighting_fg.glsl  simple_animated_vt.glsl  simple_instanced_animated_vt.glsl  skybox_cube_map_fg.glsl  skybox_cube_map_vt.glsl  skybox_vt.glsl
Docs/Development/: Architecture.md
Engine/Configuration/Private/Shader/: DefaultShaders.yaml
Engine/Configuration/Public/Variables/: EngineConfiguration.yml
Engine/Documentation/Development/: Error.md
Engine/Documentation/Lang/: README-PT.md
Engine/Include/: CMakeLists.txt
Engine/Include/fmt/: chrono.h
Engine/Resources/Shaders/: Font2D.vert  Font3D.frag  Font3D.vert  Lighting.frag  Lighting.vert  SimpleAnimated.vert  Skybox.frag  Skybox.vert  SkyboxCubemap.vert  Terrain.frag  Terrain.vert  collision_fg.glsl  collision_vt.glsl  common_fg.glsl  common_vt.glsl  geometry_vt.glsl  simple_animated_fg.glsl  simple_instanced_animated_vt.glsl  simple_instanced_vt.glsl  skybox_cube_map_fg.glsl
Engine/Source/Common/: CMakeLists.txt
Engine/Source/Common/Algorithm/: BruteForceSearch.h  KMPSearchPattern.cpp  KMPSearchPattern.h
Engine/Source/Common/FS/: DirectorySystem.cpp  DirectorySystem.h  FileUtils.cpp  FileUtils.h
Engine/Source/Common/Math/: Mathematics.cpp  Mathematics.h
Engine/Source/Common/Utils/: Common.h  LogEngine.cpp  LogEngine.h  PlataformDetect.h  Random.h  Time.cpp  Time.h  Utilities.cpp  Utilities.h
Engine/Source/Components/: CMakeLists.txt
Engine/Source/Components/Lighting/: LightHandle.cpp  LightHandle.h
Engine/Source/Components/Loader/: Importer.cpp  (+1 more)
Engine/Source/Debug/: CMakeLists.txt
Engine/Source/Editor/: CMakeLists.txt
Engine/Source/Main/: CMakeLists.txt
Include/UUID/: uuid.h
Libraries/: glad.c
Libraries/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_widgets.cpp
Templates/EmptyScene/: Template.yml
Templates/EmptyScene/Assets/: Assets.yml
Utilities/Benchmark/: server.py
Utilities/Dependencies/: common_system.py  linux_x64.py  windows_x64.py
Utilities/Install/: YeagerEngine.desktop
Utils/: YeagerEngine.desktop
Utils/Benchmark/: performance.py
Utils/Dependencies/: common_system.py  linux_x64.py  windows_x64.py
apps/yeager/: CMakeLists.txt  application.cpp  application.h  imgui.ini  input.cpp  input.h  interface.cpp  interface.h  main.cpp
apps/yeager/assets/shaders/: common_fg.glsl  common_vt.glsl  imp_object_fg.glsl  imp_object_vt.glsl  lighting_fg.glsl  lighting_vt.glsl
apps/yeager/common/: common.cpp  common.h  error.cpp  error.h  utils.cpp  utils.h
apps/yeager/engine/editor/: camera.cpp  camera.h  editorUI.h  editor_console.cpp  editor_console.h  editor_explorer.cpp  editor_explorer.h  toolbox_object.cpp  toolbox_object.h
apps/yeager/engine/lighting/: lighting.cpp  lighting.h  lighting_source.cpp  lighting_source.h
apps/yeager/engine/renderer/: imported_object.cpp  imported_object.h  renderer.cpp  renderer.h  renderer_objects.h  shader.cpp  shader.h  shapes.cpp  shapes.h  texture.cpp  texture.h  transformation.h  window.cpp  window.h
apps/yeager/gpu/: acceleration.cuh
libs/imgui/: imgui.cpp  imgui.h
(+115 files in other folders)
